# Sila

./: README.md  batched_tensorRT.py  merge_data_subsets.py  pyproject.toml  run_edu_bert.py  train_edu_bert.py  train_edu_bert.slurm
scratch/: run_edu_bert.slurm  train.sh  train_edu_bert.py
sila/: cli.py  template.yaml
tests/: test_sila.py
wandb/: latest-run
wandb/run-20240911_205103-qr0q9w21/: run-qr0q9w21.wandb
wandb/run-20240911_205642-m2l5777g/: run-m2l5777g.wandb
wandb/run-20240911_210022-sf0vhssv/: run-sf0vhssv.wandb
wandb/run-20240911_210825-q6nn36fn/: run-q6nn36fn.wandb
wandb/run-20240911_210954-zm420tbw/: run-zm420tbw.wandb
wandb/run-20240911_212227-cd3nn0n4/: run-cd3nn0n4.wandb
wandb/run-20240911_212852-o2kclipx/: run-o2kclipx.wandb
wandb/run-20240911_213025-9xhfnwus/: run-9xhfnwus.wandb
wandb/run-20240911_213219-7vn9qj1s/: run-7vn9qj1s.wandb
wandb/run-20240911_213707-yqvwtw0v/: run-yqvwtw0v.wandb
wandb/run-20240911_220522-jpuhi1xp/: run-jpuhi1xp.wandb
wandb/run-20240911_220858-tzj1t28h/: run-tzj1t28h.wandb
wandb/run-20240911_221251-ssrkp3ql/: run-ssrkp3ql.wandb
wandb/run-20240911_223918-6gnbxc6p/: run-6gnbxc6p.wandb
wandb/run-20240911_225436-m0qypl9r/: run-m0qypl9r.wandb
wandb/run-20240911_225931-qcsnb8jd/: run-qcsnb8jd.wandb
wandb/run-20240911_230254-vkzr89w6/: run-vkzr89w6.wandb
wandb/run-20240911_230526-88sbahyi/: run-88sbahyi.wandb
wandb/run-20240911_230629-snegkz7g/: run-snegkz7g.wandb
wandb/run-20240911_231146-xswm9grx/: run-xswm9grx.wandb
wandb/run-20240911_232807-89k52rni/: run-89k52rni.wandb
(+72 files in other folders)
